My first commit

--- a/Saini_HTMLProject.css
+++ b/Saini_HTMLProject.css
@@ -178,7 +178,7 @@
     font-size: 30px;
     text-decoration: underline;
     margin-left: 580px;
-    color: white;
+    color: #b3d9ff;
 }
 #aloha7  {
     font-size: 70px;
@@ -255,7 +255,7 @@
 }
 #t {
     background-color: #000066;
-    height: 160px;
+    height: 300px;
 }
 
 #th  {
@@ -347,7 +347,12 @@
     margin-left: 50px;
     color: black;
 }
-
+#tk{
+    font-family: Georgia;
+    font-size: 20px;
+    text-decoration: bold;
+    color: white;
+}
 
 
 
